--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vite": "^5.4.1"
   },
   "dependencies": {
+    "@splidejs/splide": "^4.1.4",
+    "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "@studio-freight/lenis": "^1.0.42",
     "gsap": "^3.12.5"
   }
